fix flicker img link in projetcs, add btn to socials and add github link in project cards

--- a/src/style/TopProjectsCard.css
+++ b/src/style/TopProjectsCard.css
@@ -18,8 +18,8 @@
 }
 
 .project-card-img {
-  height: 340px;
-  max-width: 240px;
+  height: 290px;
+  width: 200px;
 }
 
 .project-card-name {
@@ -30,6 +30,11 @@
 .project-card-link {
   color: green;
   font-size: 34px;
-  margin-top: 30px;
+  margin-top: 20px;
   text-decoration: none;
+}
+
+.project-card-link:hover {
+  color: black;
+  cursor: pointer;
 }
